--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,8 +1,7 @@
 fr:
   simple_form_image_fields:
     single_deletable_file:
-      choose_file: 'Choisir un fichier...'
-      delete: 'Effacer'
+      replace_file: 'Remplacer le fichier'
     single_resizable_file:
       change_image: 'Modifier'
       delete_image: 'Supprimer'
