--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,11 +1,3 @@
 en:
-  simple_form_image_fields:
-    single_deletable_file:
-      replace_file: 'Change the file'
-    single_resizable_file:
-      change_image: 'Change image'
-      delete_image: 'Delete image'
-      modal_close: 'Close'
-      modal_title: 'Resize the image'
-      modal_validate: 'Validate'
-      send_image: 'Send image'
+  simple_form_image_field:
+    replace_file: 'Change the file'
