--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 en:
   simple_form_bs5_file_input:
     modal_close: Close
+    modal_rotate: Rotate the image
     modal_title: Resize the image
     modal_validate: Validate  
     replace_file: 'Change the file'
